fix: correct overflow property in ErrorPage styles

--- a/src/components/ErrorPage/ErrorPage.module.scss
+++ b/src/components/ErrorPage/ErrorPage.module.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Schoolbell&display=swap');
 
 .main {
-  height: 100vh;
+  overflow-y: none;
 
   .errorPage {
     display: flex;
